command-derive/tests/06-reject-wrong-code-lit.stderr
error: Expected string literal in `key = value` assignment
 --> $DIR/06-reject-wrong-code-lit.rs:5:22
  |
5 |     #[command(code = 123)]
  |                      ^^^
