command-derive/tests/06-reject-wrong-code-lit.rs
use command_derive::*;

#[derive(Command)]
enum Enum {
    #[command(code = 123)]
    Variant
}

fn main() {}
